--- a/resources/index.html
+++ b/resources/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>hi, world!</title>
+    <title>Besides Programming</title>
     <link href="css/garden.css" rel="stylesheet" type="text/css" media="screen">
   </head>
   <body>
-    <h1>andromeda</h1>
-    <div id="container"></div>
+    <div id="app"></div>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
