Fix LESS configuration

--- a/resources/index.html
+++ b/resources/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>Besides Programming</title>
-    <link href="css/garden.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="css/screen.css" rel="stylesheet" type="text/css" media="screen">
   </head>
   <body>
     <div id="app"></div>
