Refactor the site to feature updated design

--- a/resources/index.html
+++ b/resources/index.html
@@ -7,7 +7,8 @@
     <title>Besides Programming</title>
     <link href="css/screen.css" rel="stylesheet" type="text/css" media="screen">
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
 
