--- a/resources/index.html
+++ b/resources/index.html
@@ -34,6 +34,14 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <script async src="https://www.googletagmanager.com/gtag/js"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    </script>
+
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
