--- a/resources/index.html
+++ b/resources/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>Besides Programming</title>
-    <link href="css/screen.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/css/screen.css" rel="stylesheet" type="text/css" media="screen">
 
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
@@ -42,6 +41,6 @@
       gtag('js', new Date());
     </script>
 
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
   </body>
 </html>
