--- a/resources/index.html
+++ b/resources/index.html
@@ -34,7 +34,7 @@
   <body>
     <div id="app"></div>
 
-    <script async src="https://www.googletagmanager.com/gtag/js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88781129-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
