--- a/resources/index.html
+++ b/resources/index.html
@@ -34,13 +34,14 @@
   <body>
     <div id="app"></div>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88781129-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date())
     </script>
 
     <script type="text/javascript" src="/js/app.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88781129-1"></script>
   </body>
 </html>
