Clean up index.html for the JS app

--- a/assets/public/index.html
+++ b/assets/public/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>Besides Programming</title>
-    <link href="/css/screen.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="/css/styles.min.css" rel="stylesheet" type="text/css" media="screen">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
-
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/ico/apple-icon-60x60.png">
